--- a/portfolio.html
+++ b/portfolio.html
@@ -146,6 +146,8 @@
             color: #fff;
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
             transition: transform 0.3s, background 0.3s;
+            text-align: center;
+            width: 120px;
         }
 
         .skill:hover {
@@ -154,47 +156,10 @@
             color: #121212;
         }
 
-        /* Projects */
-        .projects {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 30px;
-        }
-
-        .project {
-            background: #1f1f1f;
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-            transition: transform 0.3s;
-            max-width: 300px;
-        }
-
-        .project img {
-            width: 100%;
-            transition: transform 0.3s ease-in-out;
-        }
-
-        .project:hover {
-            transform: translateY(-10px);
-        }
-
-        .project img:hover {
-            transform: scale(1.05);
-        }
-
-        .project-content {
-            padding: 20px;
-        }
-
-        .project-content h3 {
+        .skill img {
+            width: 60px;
+            height: 60px;
             margin-bottom: 10px;
-            color: #ffaf00;
-        }
-
-        .project-content p {
-            font-size: 1rem;
         }
 
         /* Footer */
@@ -288,14 +253,38 @@
     <section id="skills" class="section">
         <h2>Skills</h2>
         <div class="skills-list">
-            <div class="skill">Java</div>
-            <div class="skill">Python</div>
-            <div class="skill">C++</div>
-            <div class="skill">JavaScript</div>
-            <div class="skill">MERN Stack</div>
-            <div class="skill">Electronics Knowledge</div>
-            <div class="skill">IoT</div>
-            <div class="skill">Machine Learning</div>
+            <div class="skill">
+                <img src="java.png" alt="Java">
+                Java
+            </div>
+            <div class="skill">
+                <img src="python.jpeg" alt="Python">
+                Python
+            </div>
+            <div class="skill">
+                <img src="cpp.png" alt="C++">
+                C++
+            </div>
+            <div class="skill">
+                <img src="js.png" alt="JavaScript">
+                JavaScript
+            </div>
+            <div class="skill">
+                <img src="mernn.png" alt="MERN Stack">
+                MERN Stack
+            </div>
+            <div class="skill">
+                <img src="elec.jpeg" alt="Electronics Knowledge">
+                Electronics Knowledge
+            </div>
+            <div class="skill">
+                <img src="iot.png" alt="IoT">
+                IoT
+            </div>
+            <div class="skill">
+                <img src="ml.png" alt="Machine Learning">
+                Machine Learning
+            </div>
         </div>
     </section>
 
